--- a/captum_demo.ipynb
+++ b/captum_demo.ipynb
@@ -52,7 +52,7 @@
     "! wget -P meta/ https://s3.amazonaws.com/deep-learning-models/image-models/imagenet_class_index.json\n",
     "\n",
     "# download test images\n",
-    "! mkdri img\n",
+    "! mkdir img\n",
     "! wget -P img/ -O img/car.jpg https://www.carscoops.com/wp-content/uploads/2018/03/lamborghini-squadra-corse-huracan-300.jpg\n",
     "! wget -P img/ -O img/dog.jpg https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Leonberger-3.jpg\n",
     "! wget -P img/ -O img/cat.jpg http://4.bp.blogspot.com/-bD3QjwYaRds/T9xVNIEsy0I/AAAAAAAAAFc/1vJcHgvoFDE/s1600/Neighbours_Siamese.jpg"
